Changes; Program can now sync with Outlook

--- a/Hull_Timetable_To_Outlook/Hull_Timetable_To_Outlook/packages.config
+++ b/Hull_Timetable_To_Outlook/Hull_Timetable_To_Outlook/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="FSharp.Core" version="4.0.0.1" targetFramework="net452" />
   <package id="HtmlAgilityPack" version="1.4.9.4" targetFramework="net452" />
+  <package id="Microsoft.Office.Interop.Outlook" version="15.0.4797.1003" targetFramework="net452" />
   <package id="ScrapySharp" version="2.6.2" targetFramework="net452" />
   <package id="Selenium.WebDriver" version="3.9.0" targetFramework="net452" />
 </packages>
